[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 4

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
process_priority = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
margin_right = 80.0
margin_bottom = 18.0
size_flags_vertical = 3
text = "Resume"

[node name="Options" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 22.0
margin_right = 80.0
margin_bottom = 40.0
size_flags_vertical = 3
text = "Options"

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 44.0
margin_right = 80.0
margin_bottom = 64.0
size_flags_vertical = 3
text = "Quit"
[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Options" to="PauseMenu" method="_on_Options_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Quit" to="PauseMenu" method="_on_Quit_pressed"]
